--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
 
             </div>
 
-            <div class="bf_farm_container policiales">
+            <div class="bf_farm_container deportes">
 
             </div>
 
